--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,6 @@ db:
   driver: PostgresDriver
   url: postgres:5432
   hosts: localhost,127.0.0.1
-  properties:
-    first: 123
-    second: 567
-    third.value: Third
   pool:
     size: 12
     timeout: 10
@@ -22,8 +18,8 @@ db:
 logging:
   level:
     root: INFO
-    com.szdev.spring.database.pool: INFO
-    org.springframework.jdbc.core: TRACE
+    com.sz.dev: INFO
+    #org.springframework.jdbc.core: TRACE
   file:
     name: szdev.log
     path: /
